# operation-api

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yaml  mise.toml  rules.json  syntax.json
.config/: nextest.toml
.github/workflows/: bench.yaml  check-and-lint.yaml  test.yaml
cli/: Cargo.toml
cli/src/: cli.rs
core/: Cargo.toml
core/src/: config.rs  context.rs  generate.rs  lib.rs  namespace.rs  protocol.rs  ty.rs  utils.rs
core/src/checks/: mod.rs
core/src/generate/: context.rs  files.rs  matcher.rs  remote.rs  rust.rs
core/src/snapshots/: operation_api_core__generate__test__config_loader.snap
derives/: Cargo.toml
derives/src/: derive_enum.rs  derive_error.rs  derive_one_of.rs  derive_struct.rs  generate_module.rs  generate_ops.rs  lib.rs  macros.rs  shared.rs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  naming.md  syntax.md  type-system.md
docs/src/linting/: format.md  rules.md
docs/src/syntax/: builtin.md  keywords.md  spanned.md  tokens.md
docs/src/types/: array.md  enum.md  errors.md  namespace.md  oneof.md  operation.md  struct.md  type.md  union.md  use.md
examples/gen-a/: Cargo.toml  op-gen.toml
examples/gen-a/src/: lib.rs
examples/gen-a/src/operations/: abc_corp_exts.rs  abc_corp_namespace.rs  abc_corp_test.rs  mod.rs
examples/gen-a/tests/: test_ser.rs
examples/gen-a/tests/snapshots/: test_ser__basic_int_enum.snap  test_ser__basic_str_enum.snap  test_ser__basic_struct.snap  test_ser__basic_struct_with_readme.snap  test_ser__some_struct_with_enum.snap
manifests/: Cargo.toml
manifests/src/: config.rs  files.rs  lib.rs  package.rs  rules.rs  version.rs
parser/: .gitignore  Cargo.toml
parser/benches/: parsing.rs
parser/grammar/: ident.pest
parser/samples/: array.pld  bench_enum.pld  bench_struct.pld  complex_union.pld  enum.pld  error.pld  explicit_oneof.pld  message_with_enum.pld  mod.pld  ns.pld  op.pld  some_import.pld  test_message.pld
parser/samples/abc-corp/: schema.toml
parser/samples/abc-corp/schema/: errors.pld  lib.pld
parser/samples/abc-corp/schema/foo/: array.pld  enums.pld  explicit_oneof.pld  message_with_enum.pld  meta.pld  test_message.pld
parser/samples/bar-corp/: schema.toml
parser/samples/bar-corp/schema/: lib.pld
parser/samples/errors/: invalid_parse.txt
parser/src/: ast.rs  ctx.rs  defs.rs  diagnostics.rs  lib.rs  parser.rs  tokens.rs  tst.rs  utils.rs
parser/src/ast/: anonymous.rs  array.rs  comment.rs  def.rs  enm.rs  ident.rs  import.rs  items.rs  meta.rs  namespace.rs  one_of.rs  op.rs  path.rs  strct.rs  ty.rs  ty_def.rs  union.rs  variadic.rs
parser/src/defs/: builtin.rs  comment.rs  enums.rs  ident.rs  imports.rs  message.rs  meta.rs  namespace.rs  oneof.rs  payload.rs  struct_def.rs  ty.rs  union.rs  value.rs
parser/src/fmt/: commas.rs  comments.rs  eof.rs  mod.rs  parens.rs  printer.rs
parser/src/tokens/: ast.rs  error.rs  stream.rs  tokens.rs  toks.rs
parser/tests/: compile_err.rs  version.rs
samples/: abc_corp_namespace.toml  basic-op.toml  basic-struct.json  test-enum-in-struct.toml  test-one-of.toml  test-str-enum.toml  test-struct-readme.json  test-struct-readme.toml  test-struct-text.json  test-struct-text.toml  test-struct-with-enum.json  test-struct-with-enum.toml
samples/config-a/: op-gen.toml
samples/config-cli/: op-gen.toml
samples/gen-a/: abc_corp_namespace.rs  abc_corp_test.rs
scripts/: rules.py  syntax.py
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: shared.rs  test_datetime.rs  test_enum.rs  test_error.rs  test_gen.rs  test_one_of.rs  test_ops.rs  test_struct.rs  test_struct_with_enum.rs
sdk/tests/snapshots/: test_datetime__test_chrono__smoke_comment_with_test_chrono.snap  test_datetime__test_time__smoke_comment_with_test_time.snap  test_enum__basic_int_enum.snap  test_enum__basic_str_enum.snap  test_one_of__one_of.snap  test_one_of__struct_with_one_of.snap  test_struct__smoke_basic_with_readme.snap  test_struct__smoke_basic_with_text.snap  test_struct_with_enum__some_enum_in_struct.snap  test_struct_with_enum__some_struct_with_enum.snap
testing/: Cargo.toml
testing/src/: lib.rs
