[workspace.package]
name = "operation-api"
edition = "2024"
version = "0.1.0"

[workspace]
members = ["sdk", "derives", "core"]
resolver = "3"

[workspace.dependencies]
toml = "0.9"
serde_json = "1"
serde_yaml = "0.9"

convert_case = "0.8"
darling = "0.21"
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = "1"

paste = "1"
bon = "3"
inventory = "0.3"

config = "0.15"

thiserror = "2"

insta = "1.43.1"
