[workspace.package]
edition = "2024"
version = "0.1.0"
license-file = "LICENSE.md"

homepage = "https://github.com/joshua-auchincloss/operation-api"
authors = ["Joshua Auchincloss <joshua.auchincloss@proton.me>"]


[workspace]
members = ["sdk", "derives", "core", "cli", "examples/*", "testing"]
resolver = "3"

[workspace.dependencies]
toml = "0.9"
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"

convert_case = "0.8"
darling = "0.21"
proc-macro2 = "1"
quote = "1"
syn = "2"
serde = "1"

paste = "1"
bon = "3"
inventory = "0.3"

config = "0.15"

thiserror = "2"

insta = "1.43.1"


tracing = "0.1"
tracing-subscriber = "0.3"
