[package]
name = "operation-api-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "define"

[dependencies]
operation-api-manifests = { path = "../manifests" }
operation-api-core = { path = "../core", features = [
    "generate",
    "chrono",
    "time",
] }

clap = { version = "*", features = ["derive", "env"] }

tokio = { version = "*", features = ["full"] }

human-panic = { version = "*", features = [] }

tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[dev-dependencies]
operation-api-testing = { path = "../testing" }
