[package]
name = "operation-api-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
generate = []
chrono = ["dep:chrono"]
time = ["dep:time"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"], optional = true }
time = { workspace = true, features = ["serde"], optional = true }

paste.workspace = true
bon.workspace = true
inventory.workspace = true
thiserror.workspace = true
config = { workspace = true, features = ["yaml", "json", "toml"] }


glob.workspace = true
toml.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true


validator = { version = "0.20", features = ["derive"] }
rayon = "1"

tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = [] }

proc-macro2.workspace = true
convert_case.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
operation-api-testing = { path = "../testing" }
tokio = { version = "*", features = ["full"] }

tempfile = "*"
