[package]
name = "operation-api-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
generate = []
chrono = ["dep:chrono"]
time = ["dep:time"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { workspace = true, optional = true }

dyn-inventory = { workspace = true }

serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"], optional = true }
time = { workspace = true, features = ["serde"], optional = true }

paste.workspace = true
bon.workspace = true
inventory.workspace = true
thiserror.workspace = true
config = { workspace = true, features = ["yaml", "json", "toml"] }


cfg-if.workspace = true
test-case.workspace = true

glob.workspace = true
toml.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true


validator = { workspace = true, features = ["derive"] }
rayon.workspace = true

tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = [] }

proc-macro2.workspace = true
convert_case.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
operation-api-testing = { path = "../testing" }

tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
