[package]
name = "operation-api-derives"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true


[lib]
proc-macro = true

[dependencies]
operation-api-core = { path = "../core" }

convert_case.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true


serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
