[package]
name = "operation-api-derives"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = ["chrono", "time"]
chrono = ["operation-api-core/chrono"]
time = ["operation-api-core/time"]

[lib]
proc-macro = true

[dependencies]
operation-api-manifests = { path = "../manifests" }
operation-api-core = { path = "../core", features = ["generate"] }

glob.workspace = true
convert_case.workspace = true
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
operation-api-testing = { path = "../testing" }

test-case = "3"
