[package]
name = "operation-api-manifests"
edition.workspace = true
version.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
config = { workspace = true, features = ["toml"] }
thiserror.workspace = true
validator = { workspace = true, features = ["derive"] }
semver = "1"
regex = "*"
serde_json.workspace = true
prettyprint = "*"
toml = { workspace = true, features = ["serde"] }
glob.workspace = true
tracing.workspace = true

[dev-dependencies]
test-case.workspace = true
