[package]
name = "operation-api-parser"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[[bench]]
name = "parsing"
harness = false

[[bin]]
name = "emit"

[features]
bench = []
emit = ["serde_json"]

[dependencies]
operation-api-manifests = { path = "../manifests" }

serde = { workspace = true, features = ["derive"] }
paste.workspace = true
bon.workspace = true
thiserror.workspace = true
tracing.workspace = true
miette = { version = "7", features = ["fancy"] }

logos = "*"

inventory = "0.3"
dyn-inventory = "0.2.0"
validator = { workspace = true, features = ["derive"] }

serde_json = { workspace = true, optional = true }


[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
operation-api-testing = { path = "../testing" }
test-case.workspace = true
serde_json.workspace = true
