[package]
name = "operation-api-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true


[dependencies]
operation-api-core = { path = "../core" }
operation-api-derives = { path = "../derives" }
serde_repr = "*"

[dev-dependencies]
operation-api-testing = { path = "../testing" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
