[package]
name = "operation-api-sdk"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
default = ["chrono"]
generate = []

chrono = ["operation-api-core/chrono", "operation-api-derives/chrono"]
time = ["operation-api-core/time", "operation-api-derives/time"]

[dependencies]

operation-api-core = { path = "../core" }
operation-api-derives = { path = "../derives" }

serde_repr.workspace = true


[dev-dependencies]
operation-api-testing = { path = "../testing" }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
paste.workspace = true
chrono = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde"] }
thiserror = "*"
