[package]
name = "test-gen-a"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
operation-api-core = { path = "../../core" }
operation-api-sdk = { path = "../../sdk" }

serde = "*"


[dev-dependencies]
operation-api-testing = { path = "../../testing" }
toml.workspace = true
serde_json.workspace = true
paste.workspace = true
