[package]
name = "test-gen-a"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
operation-api-sdk = { path = "../../sdk" }
serde.workspace = true
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
operation-api-testing = { path = "../../testing" }
toml.workspace = true
serde_json.workspace = true
paste.workspace = true
